publish: Initial commit
generated from commit 05005cc3e028d3f7f9e773a17324a26b1ec4267f

--- a/cn/futures.html
+++ b/cn/futures.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Coinstore官方API文档</title>
+    <title>GEMS官方API文档</title>
     <link href="../images/gems-favicon-07dd534d.ico" rel="icon" type="image/ico">
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -490,7 +490,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='45fa4e00db'>介绍</h1>
-<p>欢迎使用Coinstore开发者文档，此文档是Coinstore API的唯一官方文档。</p>
+<p>欢迎使用GEMS开发者文档，此文档是GEMS API的唯一官方文档。</p>
 
 <p>本文档提供了相关API的使用方法介绍。</p>
 
@@ -498,7 +498,7 @@
 
 <p>Websocket则提供了行情相关的接口及推送服务。</p>
 
-<p>Coinstore API提供的服务会在此持续更新，请大家及时关注。</p>
+<p>GEMS API提供的服务会在此持续更新，请大家及时关注。</p>
 <h1 id='9e033de16f'>快速开始</h1><h2 id='c1ae0a8486'>接入准备</h2>
 <p>如需使用API，请先登录网页端，通过【用户中心】-【API管理】创建一个API key，再据此文档详情进行开发和交易。</p>
 
@@ -513,7 +513,7 @@
 <li><code>Secret Key</code> 签名认证加密所使用的密钥</li>
 </ul>
 <h2 id='5076603a3e'>接口类型</h2>
-<p>Coinstore为用户提供两种接口，您可根据自己的使用场景和偏好来选择适合的方式进行查询行情、交易。</p>
+<p>GEMS为用户提供两种接口，您可根据自己的使用场景和偏好来选择适合的方式进行查询行情、交易。</p>
 
 <p><strong>REST API</strong></p>
 
