--- a/cn/index.html
+++ b/cn/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Coinstore官方API文档</title>
+    <title>GEMS官方API文档</title>
     <link href="../images/gems-favicon-07dd534d.ico" rel="icon" type="image/ico">
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -511,7 +511,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='45fa4e00db'>介绍</h1>
-<p>欢迎使用Coinstore开发者文档，此文档是Coinstore API的唯一官方文档。</p>
+<p>欢迎使用GEMS开发者文档，此文档是GEMS API的唯一官方文档。</p>
 
 <p>本文档提供了相关API的使用方法介绍。</p>
 
@@ -519,7 +519,7 @@
 
 <p>Websocket则提供了行情相关的接口及推送服务。</p>
 
-<p>Coinstore API提供的服务会在此持续更新，请大家及时关注。</p>
+<p>GEMS API提供的服务会在此持续更新，请大家及时关注。</p>
 <h1 id='9e033de16f'>快速开始</h1><h2 id='apikey'>创建APIkey</h2>
 <p>如需使用API，请先登录网页端，通过【用户中心】-【API管理】创建一个API key，再据此文档详情进行开发和交易。</p>
 
@@ -532,7 +532,7 @@
 <li><code>Secret Key</code> 签名认证加密所使用的密钥</li>
 </ul>
 <h2 id='5076603a3e'>接口类型</h2>
-<p>Coinstore为用户提供两种接口，您可根据自己的使用场景和偏好来选择适合的方式进行查询行情、交易。</p>
+<p>GEMS为用户提供两种接口，您可根据自己的使用场景和偏好来选择适合的方式进行查询行情、交易。</p>
 
 <p><strong>REST API</strong></p>
 
@@ -3062,7 +3062,7 @@ Mac hmacSha256 = Mac.getInstance(&quot;HmacSHA256&quot;);
 </tbody></table>
 <h2 id='df83685cc8'><span id="6">创建订单</span></h2>
 <p>创建订单</p>
-<h4 id='50-coinstore'>普通用户的账号同一时间只允许持有 50 笔活动委托，做市账号不受此限制。如果您是做市商但有账号未添加做市账号权限，请联系 Coinstore 交付部门。</h4>
+<h4 id='50-gems'>普通用户的账号同一时间只允许持有 50 笔活动委托，做市账号不受此限制。如果您是做市商但有账号未添加做市账号权限，请联系 GEMS 交付部门。</h4>
 <blockquote>
 <p>请求体</p>
 </blockquote>
@@ -3223,7 +3223,7 @@ Mac hmacSha256 = Mac.getInstance(&quot;HmacSHA256&quot;);
 </tbody></table>
 <h2 id='77aaf08979'><span id="13">批量下单</span></h2>
 <p>批量下单</p>
-<h4 id='50-coinstore-2'>普通用户的账号同一时间只允许持有 50 笔活动委托，做市账号不受此限制。如果您是做市商但有账号未添加做市账号权限，请联系 Coinstore 交付部门。</h4>
+<h4 id='50-gems-2'>普通用户的账号同一时间只允许持有 50 笔活动委托，做市账号不受此限制。如果您是做市商但有账号未添加做市账号权限，请联系 GEMS 交付部门。</h4>
 <blockquote>
 <p>请求体</p>
 </blockquote>
