--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Official API Document Of Coinstore</title>
+    <title>Official API Document Of GEMS</title>
     <link href="../images/gems-favicon-07dd534d.ico" rel="icon" type="image/ico">
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -517,7 +517,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>Welcome to Coinstore Developer Documentation. It is the only official documentation of Coinstore API.</p>
+<p>Welcome to GEMS Developer Documentation. It is the only official documentation of GEMS API.</p>
 
 <p>This documentation provides an introduction to the use of related APIs.</p>
 
@@ -525,7 +525,7 @@
 
 <p>Websocket provides ticker-related interface and push service.</p>
 
-<p>The services provided by Coinstore API will be continuously updated here, so stay tuned for updates.</p>
+<p>The services provided by GEMS API will be continuously updated here, so stay tuned for updates.</p>
 <h1 id='quick-start'>Quick Start</h1><h2 id='create-apikey'>Create APIkey</h2>
 <p>To use API, please log into the webpage first, create an API key through [User Center] - [API Managment], and then develop and trade according to the details of this documentation.</p>
 
@@ -538,7 +538,7 @@
 <li><code>Secret Key</code> Key for encryption of signature authentication</li>
 </ul>
 <h2 id='interface-type'>Interface Type</h2>
-<p>Coinstore provides users with two interfaces, and you can choose the appropriate way to query the ticker and trade according to your own usage scenarios and preferences.</p>
+<p>GEMS provides users with two interfaces, and you can choose the appropriate way to query the ticker and trade according to your own usage scenarios and preferences.</p>
 
 <p><strong>REST API</strong></p>
 
@@ -3153,7 +3153,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h2 id='create-order'><span id="6"> Create order </span></h2>
 <p>Create order</p>
-<h4 id='regular-user-accounts-are-only-allowed-to-hold-up-to-50-active-orders-at-the-same-time-while-market-making-accounts-are-not-subject-to-this-restriction-if-you-are-a-market-maker-but-do-not-have-permission-to-add-a-market-making-account-please-contact-the-coinstore-delivery-department'>Regular user accounts are only allowed to hold up to 50 active orders at the same time, while market-making accounts are not subject to this restriction.If you are a market maker but do not have permission to add a market-making account, please contact the Coinstore delivery department.</h4>
+<h4 id='regular-user-accounts-are-only-allowed-to-hold-up-to-50-active-orders-at-the-same-time-while-market-making-accounts-are-not-subject-to-this-restriction-if-you-are-a-market-maker-but-do-not-have-permission-to-add-a-market-making-account-please-contact-the-gems-delivery-department'>Regular user accounts are only allowed to hold up to 50 active orders at the same time, while market-making accounts are not subject to this restriction.If you are a market maker but do not have permission to add a market-making account, please contact the GEMS delivery department.</h4>
 <blockquote>
 <p>Request Body</p>
 </blockquote>
@@ -3319,7 +3319,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h2 id='batch-ordering'><span id="13"> Batch ordering </span></h2>
 <p>Batch ordering</p>
-<h4 id='regular-user-accounts-are-only-allowed-to-hold-up-to-50-active-orders-at-the-same-time-while-market-making-accounts-are-not-subject-to-this-restriction-if-you-are-a-market-maker-but-do-not-have-permission-to-add-a-market-making-account-please-contact-the-coinstore-delivery-department-2'>Regular user accounts are only allowed to hold up to 50 active orders at the same time, while market-making accounts are not subject to this restriction.If you are a market maker but do not have permission to add a market-making account, please contact the Coinstore delivery department.</h4>
+<h4 id='regular-user-accounts-are-only-allowed-to-hold-up-to-50-active-orders-at-the-same-time-while-market-making-accounts-are-not-subject-to-this-restriction-if-you-are-a-market-maker-but-do-not-have-permission-to-add-a-market-making-account-please-contact-the-gems-delivery-department-2'>Regular user accounts are only allowed to hold up to 50 active orders at the same time, while market-making accounts are not subject to this restriction.If you are a market maker but do not have permission to add a market-making account, please contact the GEMS delivery department.</h4>
 <blockquote>
 <p>Request Body</p>
 </blockquote>
