--- a/en/futures.html
+++ b/en/futures.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Coinstore official API document</title>
+    <title>GEMS official API document</title>
     <link href="../images/gems-favicon-07dd534d.ico" rel="icon" type="image/ico">
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -490,7 +490,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>Welcome to Coinstore Developer Documentation. It is the only official documentation of Coinstore API.</p>
+<p>Welcome to GEMS Developer Documentation. It is the only official documentation of GEMS API.</p>
 
 <p>This documentation provides an introduction to the use of related APIs.</p>
 
@@ -498,7 +498,7 @@
 
 <p>Websocket provides ticker-related interface and push service.</p>
 
-<p>The services provided by Coinstore API will be continuously updated here, so stay tuned for updates.</p>
+<p>The services provided by GEMS API will be continuously updated here, so stay tuned for updates.</p>
 <h1 id='quick-start'>Quick Start</h1><h2 id='access-preparation'>Access Preparation</h2>
 <p>To use API, please log into the webpage first, create an API key through [User Center] - [API Managment], and then develop and trade according to the details of this documentation.</p>
 
@@ -513,7 +513,7 @@
 <li><code>Secret Key</code> Key for encryption of signature authentication</li>
 </ul>
 <h2 id='interface-type'>Interface Type</h2>
-<p>Coinstore provides users with two interfaces, and you can choose the appropriate way to query the ticker and trade according to your own usage scenarios and preferences.</p>
+<p>GEMS provides users with two interfaces, and you can choose the appropriate way to query the ticker and trade according to your own usage scenarios and preferences.</p>
 
 <p><strong>REST API</strong></p>
 
