--- a/cn/index.html
+++ b/cn/index.html
@@ -290,7 +290,7 @@
 
   <body class="cn cn_index" data-languages="[]">
     <div class="header">
-      <img src="../images/gems-logo.png" class="logo" alt="" />
+      <img src="../images/gems-logo-9efecc2b.png" class="logo" alt="" />
       <div class="tabs">
         <ul>
           <li class="active">
@@ -504,7 +504,7 @@
                   </li>
               </ul>
           </li>
-        <li class="create_api"><a target="_blank" href="https://www.coinstore.com/#/user/bindAuth/ManagementAPI">创建 API Key</a></li>
+        <li class="create_api"><a target="_blank" href="https://www.gems.vip/#/user/bindAuth/ManagementAPI">创建 API Key</a></li>
       </ul>
     </div>
     <div class="page-wrapper">
@@ -564,7 +564,7 @@
 
 <p><strong>WebSocket</strong></p>
 
-<p><code>wss://ws.coinstore.com/s/ws</code></p>
+<p><code>wss://ws.gems.vip/s/ws</code></p>
 <h2 id='c1fd2fc5ac'>限频规则</h2>
 <p><strong>相同ip</strong></p>
 
@@ -630,7 +630,7 @@ Mac hmacSha256 = Mac.getInstance(&quot;HmacSHA256&quot;);
 
 <p><strong>Python示例</strong></p>
 
-<p>https://coinstore-sg-encryption.s3.ap-southeast-1.amazonaws.com/filesUpload/ex1/public/coinstore.py</p>
+<p>https://gems-encryption.s3.eu-central-1.amazonaws.com/filesUpload/ex1/public/gems.py</p>
 
 <p><code>推荐python sdk使用3.9版本，使用如果版本低于3.9版本，可能会造成兼容性或者签名计算有误的情况。</code></p>
 <h1 id='api'>API接入说明</h1><h2 id='5b7654a66a'><span id="a3">请求格式</span></h2>
@@ -4551,7 +4551,7 @@ Mac hmacSha256 = Mac.getInstance(&quot;HmacSHA256&quot;);
 </tr>
 </tbody></table>
 <h1 id='websocket'>Websocket行情数据</h1><h2 id='36d1a17821'><strong>简介</strong></h2><h3 id='url'>接入URL</h3>
-<p>wss://ws.coinstore.com/s/ws</p>
+<p>wss://ws.gems.vip/s/ws</p>
 
 <ol>
 <li><p>所有wss接口的 baseurl为: wss://<a href="host:port">host:port</a>/s/ws</p></li>
