--- a/en/index.html
+++ b/en/index.html
@@ -290,7 +290,7 @@
 
   <body class="en en_index" data-languages="[]">
     <div class="header">
-      <img src="../images/gems-logo.png" class="logo" alt="" />
+      <img src="../images/gems-logo-9efecc2b.png" class="logo" alt="" />
       <div class="tabs">
         <ul>
           <li class="active">
@@ -510,7 +510,7 @@
                   </li>
               </ul>
           </li>
-        <li class="create_api"><a target="_blank" href="https://www.coinstore.com/#/user/bindAuth/ManagementAPI">Create API KEY</a></li>
+        <li class="create_api"><a target="_blank" href="https://www.gems.vip/#/user/bindAuth/ManagementAPI">Create API KEY</a></li>
       </ul>
     </div>
     <div class="page-wrapper">
@@ -570,7 +570,7 @@
 
 <p><strong>WebSocket</strong></p>
 
-<p><code>wss://ws.coinstore.com/s/ws</code></p>
+<p><code>wss://ws.gems.vip/s/ws</code></p>
 <h2 id='rate-limit'>Rate Limit</h2>
 <p><strong>Same IP</strong></p>
 
@@ -640,7 +640,7 @@ Note: The request parameters and request body are not sorted but directly splice
 </code></pre></div>
 <p><strong>Python Example</strong></p>
 
-<p>https://coinstore-sg-encryption.s3.ap-southeast-1.amazonaws.com/filesUpload/ex1/public/coinstore.py</p>
+<p>https://gems-encryption.s3.eu-central-1.amazonaws.com/filesUpload/ex1/public/gems.py</p>
 
 <p><code>It is recommended to use Python SDK version 3.9,using a version lower than 3.9 may lead to compatibility issues or inaccuracies in signature calculation.</code></p>
 <h1 id='api-access-instructions'>API Access Instructions</h1><h2 id='request-format'><span id="a3"> Request Format </span></h2>
@@ -4695,7 +4695,7 @@ needs to be set.</strong></p>
 </tr>
 </tbody></table>
 <h1 id='websocket-ticker-data'>Websocket Ticker Data</h1><h2 id='introduction-2'><strong>Introduction</strong></h2><h3 id='access-url'>Access URL</h3>
-<p>wss://ws.coinstore.com/s/ws</p>
+<p>wss://ws.gems.vip/s/ws</p>
 
 <ol>
 <li><p>The baseurl of all wss interfaces is: wss://<a href="host:port">host:port</a>/s/ws</p></li>
