--- a/en/futures.html
+++ b/en/futures.html
@@ -290,7 +290,7 @@
 
   <body class="en en_futures" data-languages="[]">
     <div class="header">
-      <img src="../images/gems-logo.png" class="logo" alt="" />
+      <img src="../images/gems-logo-9efecc2b.png" class="logo" alt="" />
       <div class="tabs">
         <ul>
           <li class="">
@@ -483,7 +483,7 @@
                   </li>
               </ul>
           </li>
-        <li class="create_api"><a target="_blank" href="https://www.coinstore.com/#/user/bindAuth/ManagementAPI">Create API KEY</a></li>
+        <li class="create_api"><a target="_blank" href="https://www.gems.vip/#/user/bindAuth/ManagementAPI">Create API KEY</a></li>
       </ul>
     </div>
     <div class="page-wrapper">
@@ -502,7 +502,7 @@
 <h1 id='quick-start'>Quick Start</h1><h2 id='access-preparation'>Access Preparation</h2>
 <p>To use API, please log into the webpage first, create an API key through [User Center] - [API Managment], and then develop and trade according to the details of this documentation.</p>
 
-<p>You can click &#39;https://www.coinstore.com/#/user/bindAuth/ManagementAPI&#39; to create an API Key.</p>
+<p>You can click &#39;https://www.gems.vip/#/user/bindAuth/ManagementAPI&#39; to create an API Key.</p>
 
 <p>Each user can create 5 groups of API Keys, and each group of API Keys can bind 5 different IP addresses. Once an API key binds an address, the API interface can only be called by using the API key from the bound IP address. For security reasons, it is strongly recommended that you bind the corresponding IP address for API key.</p>
 
@@ -541,11 +541,11 @@
 <h2 id='access-urls'>Access URLs</h2>
 <p><strong>REST API</strong></p>
 
-<p><code>https://futures.coinstore.com/api</code></p>
+<p><code>https://futures.gems.vip/api</code></p>
 
 <p><strong>WebSocket</strong></p>
 
-<p><code>wss://ws-futures.coinstore.com/socket.io/?EIO=3&amp;transport=websocket</code></p>
+<p><code>wss://ws-futures.gems.vip/socket.io/?EIO=3&amp;transport=websocket</code></p>
 
 <p>To ensure the stability of API service, it is recommended to access using Japanese AWS cloud server. If the client server in Chinese mainland is used, it would be difficult to guarantee the stability of the connection.</p>
 <h2 id='signature-authentication'><span id="a4"> Signature Authentication </span></h2>
@@ -612,7 +612,7 @@ Note: The request parameters and request body are not sorted but directly splice
 - POST request: Parameters can be set in the path, and they can be sent in JSON format to the request body. If there are no parameters,{} needs to be sent</p>
 
 <p>A licit request consists of the following parts:
-- method request address: Access server address futures.coinstore.com，e.g. https://futures.coinstore.com/api/future/place
+- method request address: Access server address futures.gems.vip，e.g. https://futures.gems.vip/api/future/place
 - Required and optional parameters.
 - X-CS-APIKEY: API Key applied by the user.
 - X-CS-EXPIRES: Timestamp when you issued the request. For example:1629291143107.
@@ -1735,7 +1735,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h2 id='get-active-order-v2'><span id="2">Get active order V2</span></h2>
 <p>Get active order V2 version</p>
-<h4 id='the-new-interface-api-domain-name-address-https-futures-coinstore-com-call-support-for-apikey'>The new interface API domain name address <code>https://futures.coinstore.com</code>  Call support for ApiKey</h4><h3 id='http-request-8'>HTTP Request:</h3>
+<h4 id='the-new-interface-api-domain-name-address-https-futures-gems-vip-call-support-for-apikey'>The new interface API domain name address <code>https://futures.gems.vip</code>  Call support for ApiKey</h4><h3 id='http-request-8'>HTTP Request:</h3>
 <ul>
 <li>GET /api/v2/trade/order/active</li>
 </ul>
@@ -1938,7 +1938,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h2 id='get-order-info-v2'><span id="2">get order info V2</span></h2>
 <p>get order info V2 version</p>
-<h4 id='the-new-interface-api-domain-name-address-https-futures-coinstore-com-call-support-for-apikey-2'>The new interface API domain name address <code>https://futures.coinstore.com</code>  Call support for ApiKey</h4><h3 id='http-request-9'>HTTP Request:</h3>
+<h4 id='the-new-interface-api-domain-name-address-https-futures-gems-vip-call-support-for-apikey-2'>The new interface API domain name address <code>https://futures.gems.vip</code>  Call support for ApiKey</h4><h3 id='http-request-9'>HTTP Request:</h3>
 <ul>
 <li>GET /api/v2/trade/order/orderInfo</li>
 </ul>
@@ -2800,7 +2800,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h2 id='get-user-39-s-all-trade-records-v2'><span id="3">Get user&#39;s all trade records V2</span></h2>
 <p>Get all trade records V2 version</p>
-<h4 id='the-new-interface-api-domain-name-address-https-futures-coinstore-com-call-support-for-apikey-3'>The new interface API domain name address <code>https://futures.coinstore.com</code>  Call support for ApiKey</h4><h3 id='http-request-15'>HTTP Request:</h3>
+<h4 id='the-new-interface-api-domain-name-address-https-futures-gems-vip-call-support-for-apikey-3'>The new interface API domain name address <code>https://futures.gems.vip</code>  Call support for ApiKey</h4><h3 id='http-request-15'>HTTP Request:</h3>
 <ul>
 <li>GET /api/v2/trade/order/queryHisMatch</li>
 </ul>
@@ -3706,7 +3706,7 @@ needs to be set.</strong></p>
 </tbody></table>
 <h1 id='websocket-ticker-data'>Websocket Ticker Data</h1><h2 id='introduction-2'>Introduction</h2><h3 id='access-url'>Access URL</h3>
 <p><code>
-wss://ws-futures.coinstore.com/socket.io/?EIO=3&amp;transport=websocket
+wss://ws-futures.gems.vip/socket.io/?EIO=3&amp;transport=websocket
 </code></p>
 <h3 id='authentication'>Authentication</h3>
 <p>Note: signature: in the same way as restful</p>
